--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.home-page-wrapper {
+  display: grid;
+  grid-template-columns: 25% 45% 30%;
+  grid-column-gap: 30px;
+  grid-auto-columns: minmax(min-content, max-content);
+}
