--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,3 +8,9 @@
   grid-column-gap: 30px;
   grid-auto-columns: minmax(min-content, max-content);
 }
+
+.recommended-article-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 10px;
+}
